--- a/.tko/repository.yaml
+++ b/.tko/repository.yaml
@@ -8,7 +8,7 @@ sources:
 - database: poo
   link: https://github.com/qxcodepoo/arcade/blob/master/Readme.md
   cache_path: /workspaces/poo-dd-cd-bloco-b-anacambraia/.tko/cache/poo.md
-  cache_timestamp: '2025-10-08 01:28:35'
+  cache_timestamp: '2025-10-13 15:33:26'
   filters: null
 expanded:
 - poo@campanha-principal
@@ -22,4 +22,4 @@ flags:
   graph: 1
   xray: 0
 lang: py
-selected: poo@relogio
+selected: poo@camisa
