--- a/.tko/repository.yaml
+++ b/.tko/repository.yaml
@@ -8,13 +8,18 @@ sources:
 - database: poo
   link: https://github.com/qxcodepoo/arcade/blob/master/Readme.md
   cache_path: /workspaces/poo-dd-cd-bloco-b-anacambraia/.tko/cache/poo.md
-  cache_timestamp: '2025-10-15 13:35:32'
+  cache_timestamp: '2025-10-16 13:19:51'
   filters: null
 expanded:
 - poo@campanha-principal
 - poo@bloco_b-primeiras-classes
 - poo@bloco_b-modificadores-de-acesso
-tasks: {}
+- poo@bloco_b-agregação-simples
+tasks:
+  poo@chinela: '{rate:100, human:sim, iagen:sim, guide:sim, alone:7, study:90}'
+  poo@camisa: '{rate:100, human:sim, guide:sim, alone:7}'
+  poo@roupa: '{rate:100, human:sim, alone:8, study:80}'
+  poo@relogio: '{rate:100, human:sim, iagen:sim, guide:sim, alone:8, study:160}'
 flags:
   quests: 0
   tracks: 0
@@ -22,4 +27,4 @@ flags:
   graph: 1
   xray: 0
 lang: py
-selected: poo@roupa
+selected: poo@notebook
