--- a/.tko/repository.yaml
+++ b/.tko/repository.yaml
@@ -8,7 +8,7 @@ sources:
 - database: poo
   link: https://github.com/qxcodepoo/arcade/blob/master/Readme.md
   cache_path: /workspaces/poo-dd-cd-bloco-b-anacambraia/.tko/cache/poo.md
-  cache_timestamp: '2025-10-21 18:35:33'
+  cache_timestamp: '2025-10-23 12:38:21'
   filters: null
 expanded:
 - poo@campanha-principal
@@ -20,6 +20,7 @@ tasks:
   poo@camisa: '{rate:100, human:sim, guide:sim, alone:7}'
   poo@roupa: '{rate:100, human:sim, alone:8, study:80}'
   poo@relogio: '{rate:100, human:sim, iagen:sim, guide:sim, alone:8, study:160}'
+  poo@motoca: '{rate:20}'
 flags:
   quests: 0
   tracks: 0
@@ -27,4 +28,4 @@ flags:
   graph: 1
   xray: 0
 lang: py
-selected: poo@motouber
+selected: poo@motoca
